add delete enrollments
