# api/swagger.json
@@ -727,7 +727,7 @@
             "name": "studentId",
             "in": "body",
             "required": true,
-            "description": "Change status of a comment from a class",
+            "description": "Enrollments students",
             "schema": {
               "$ref": "#/definitions/Enrollments"
             }
@@ -777,6 +777,54 @@
         ],
         "responses": {
           "200": {
+            "description": "Get student enrollment in a class"
+          },
+          "400": {
+            "description": "Missing a mandatory field"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "No active enrollment"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Classes"
+        ],
+        "description": "Delete student enrollment in a class",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token for authorization"
+          },
+          {
+            "name": "_id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Class ID"
+          },
+          {
+            "name": "studentId",
+            "in": "body",
+            "required": true,
+            "description": "Enrollments students",
+            "schema": {
+              "$ref": "#/definitions/Enrollments"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "202": {
             "description": "Get student enrollment in a class"
           },
           "400": {
